public_html/css/style.css
/* $Id$ */

@import url(/css/tabs.css);

/* ========= Main Content Holders ========= */
body {
    font-family: verdana;
    background-color: white;
    color: black;
    text-align: left;
}

acronym {
    text-decoration: underline;
}

p {
    margin: 1em;
}

ul {
    margin: 1em;
    margin-left: 2em;
}

li {
    list-style-type: square;
}

#doc3 {margin:auto;}

div#body {
    width: auto;
    vertical-align: top;
    padding: 0.3em 0.5em 1em 0.5em;
}

/* HEADER */
#header {
    background-color: #339900;
    background-color: #449922;
}

#header img {
    margin-left: 10px
}

/* USER */
#user {
    float: right;
    width: auto;
    padding: 6px;
    font-size: 77%;
    margin: 0px;
}

#user ul {
    padding: 0;
    margin: 0;
}

#user li {
    list-style-type: none;
    display: inline;
    padding-top: 0;
    padding-bottom: 0;
    padding-left: 1px;
    padding-right: 5px;
    text-decoration: none;
    border-right: 1px solid black;
}

#user li.last {
    border-right: none;
}

#user a {
    color: #FFFFFF;
    text-decoration: none;
}

#user a:hover {
    color: #FFFFFF;
    text-decoration: underline;
}

#user li.signout a {
    color: #B21111;
    font-weight: bold;
    padding: 2px;
}

#user li.signout a:hover {
    background-color: #B21111;
    color: #fff;
    text-decoration: none;
    padding: 2px;
}

#search {
    float: right;
    position: absolute;
    right: 12px;
    top: 32px;
}

#menubar {
    width: 100%;
    background-color: #006600;
    float: left;
    border-top: 1px solid black;
}

#menu {
    width: 100%;
    float: left;
    margin: 0!important;
}
#menu li {
    float: left;
    list-style-type: none;
}
#menu li a {
    background-color: #006600;
    color: #fff;
    display: block;
    float: left;
    font-size: 100%;
    padding-bottom: 3px;
    padding-top: 2px;
    padding-left: 8px;
    padding-right: 8px;
    text-decoration: none;
    font-family: verdana;
}
#menu li.current a, #menu li.current a:hover  {
    background: #ffffff;
    color: #000000;
    font-weight: bold;
}
#menu li a:hover {
    background: #fff;
    color: #7ac20e;
}

#menu li.first {
    margin-left: 20px;
}

#submenu {
    clear: both;
    border-bottom: 1px solid black;
    width: auto;
    height: 22px;
    text-align: left;
    margin-top: 0px!important;
    margin-right: 0px!important;
    margin-left: 0px!important;
    margin-bottom: 0px!important;
}

#submenu a {
    text-decoration: none;
    vertical-align: middle;
    line-height: 22px;
}

#submenu li.current a, #submenu li.current a:hover  {
    background: #ffffff;
    color: #000000;
    font-weight: bold;
}

#submenu li {
    display: inline;
    font-size: 93%;
    padding: 0 1px 0 5px;
    border-left: 1px solid #999;
}

#submenu li.first {
    margin-left: 10px;
    border-left: none;
}

/* ========= News ======== */
#news {
    margin-left: 1em;
    margin-right: 1em;
}

/* ========= Sidebars ========= */

.sidebar_left {
    float: left;
    width: 200px;
    background-color: #F0F0F0;
    vertical-align: top;
    font-size: 93%;
    border-right: 1px solid #ccc;
    border-bottom: 1px solid #ccc;
    padding: 1em;
    margin-right: 2em;
}

.sidebar_right {
    float: right;
    width: 200px;
    background-color: #F0F0F0;
    vertical-align: top;
    font-size: 93%;
    border-left: 1px solid #ccc;
    border-bottom: 1px solid #ccc;
    padding: 1em;
    margin-left: 2em;
}

table.sidebar-releases {
    vertical-align: top;
}

ul.side_pages {
    margin-top: 0.1em;
    margin-bottom: 1.5em;
    margin-left: 1em;
    padding-left: 1em;
    list-style: url(/gifs/box-0.gif) square;
}

li.side_page {
    text-indent: -0.4em;
    white-space: nowrap;
}


/* ========= Footer ========= */
div#footer {
    margin-top: 2em;
}

div#foot-bar {
    color: #000000;
    background-color: #339900;
    background-color: #449922;
    border-top: 1px solid #003300;
    border-bottom: 1px solid #003300;
    text-align: right;
    vertical-align: middle;
    padding-right: 0.3em;
    font-weight: bold;
    font-size: 75%;
    height: 14px;
    line-height: 14px;
}

div#foot-bar a {
    color: #000000;
    text-decoration: none;
}

div#foot-copy {
    vertical-align: top;
    padding: 0.3em;
    float: left;
}

div#foot-source {
    vertical-align: top;
    text-align: right;
    padding: 0.3em;
    float: right;
}


/* ========= Forms ========= */

table.form-holder {
    background-color: #FFFFFF;
    width: auto;
}

caption.form-caption {
    font-weight: bold;
    color: #FFFFFF;
    background-color: #339900;
    padding: 0.3em;
    border-left: 1px solid #FFFFFF;
    border-right: 1px solid #FFFFFF;
    margin-top: 0.5em;
}

/* Labels on the left side of form and table rows */
th.form-label_left {
    padding: 3px;
    text-align: left;
    vertical-align: top;
    font-weight: bold;
    color: #FFFFFF;
    background-color: #339900;
    width: 25%;
}

/* Labels on the top of form and table columns */
th.form-label_top,
th.form-label_top_center {
    padding: 3px;
    text-align: center;
    font-weight: bold;
    color: #FFFFFF;
    background-color: #339900;
}

td.form-input {
    padding: 3px;
    text-align: left;
    vertical-align: top;
    background-color: #e8e8e8;
}

td.form-input_center {
    padding: 3px;
    text-align: center;
    vertical-align: middle;
    background-color: #e8e8e8;
}

td.form-input input,
td.form-input_center input {
    font-size: 93%;
}

input.makeDocBug {
    background-color: #8CDD81;
    border: 3px ridge green;
}
p.cell_note {
    margin-top: 0.3em;
    margin-bottom: 0.2em;
    font-weight: normal;
    font-size: 93%;
}

input {
    font-family: verdana;
}

button, input[type="button"], input[type="submit"]  {
    font-family: "Lucida Grande", Myriad, "Andale Sans", "Luxi Sans", "Bitstream Vera Sans", Tahoma, "Toga Sans", Helvetica, Arial, sans-serif;
    font-weight: bold;
    background:#fafafa;
    color: #888a85;
    border: 1px solid #babdb6;
    border-top: 1px solid #d3d7cf;
    border-left: 1px solid #d3d7cf;
    margin-left: 2px;
    margin-right: 2px;
    cursor: pointer;
    padding-right: 4px;
    padding-left: 4px;
    padding-top: 2px;
    padding-bottom: 2px;
    border-radius: 4px;
    -webkit-border-radius: 4px;
    -khtml-border-radius: 4px;
    -moz-border-radius: 4px;
}

button:hover, input[type="button"]:hover, input[type="submit"]:hover  {
    background: #fafafa;
    color: #333;
}

button:active, input[type="button"]:active, input[type="submit"]:active {
    background: #e4e6e1;
    color: #555;
}

select {
    background-color: #ffffff;
    cursor: pointer;
}

input[type="text"], input[type="password"], select {
    border: 1px solid #ABADB3;
    border-radius: 2px;
    -moz-border-radius: 2px;
    -khtml-border-radius: 2px;
}

input[type="text"], input[type="password"], textarea, select {
    color: #333;
    background:#fff;
    padding: 2px;
}

input[type="text"]:focus, input[type="password"]:focus, textarea:focus  {
    color: #000;
    background-color: #fff;
    border: 1px solid #3465a4;
}

textarea {
    border: 1px solid #ABADB3;
    margin: 15px;
    padding: 10px 15px;
    text-align: justify;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -khtml-border-radius: 5px;
}

input.small, select.small {
    font-size: 75%;
}

textarea.small {
    font-size: 75%;
}

form {
    margin-bottom: 0;
}

submit {
    border: 0px;
}

td.form-input textarea {
    margin: 0;
}

/* === Voting === */

td.vote-active, td.vote-winner {
    padding: 3px;
    text-align: left;
    vertical-align: top;
    background-color: #ffbbaa;
}

td.vote-complete {
    padding: 3px;
    text-align: left;
    vertical-align: top;
    background-color: #bbaaff;
}

td.vote-inactive {
    padding: 3px;
    text-align: left;
    vertical-align: top;
    background-color: #e8e8e8;
}


/* === User Submission Responses === */
div.errors,
div.warnings,
div.explain,
div.success,
div.tags {
    clear: both;
    font-size: 108%;
    font-weight: bold;
    padding: 1.0em !important;
    border: 1px solid !important;
    margin: 1.0em !important;
}

div.errors {
    border-color: #660000;
    background: #fee;
    color: #660000;
}

div.warnings {
    border-color: #ff8c00;
    background: #ffa;
    color: #ff8c00;
}

div.success {
    border-color: #006600;
    background-color: #CCFF99;
    color: #006600;
}

div.tags {
    border-color: #ff8c00;
    background: #ffa;
    color: #ff8c00;
    width: 500px;
    margin-left : 100px;
}

div.explain {
    font-size: 100%;
    border-color: #000066;
    color: #000066;
}

div.errors ul,
div.warnings ul,
div.explain ul,
div.success ul {
    margin-top: 0em;
    margin-bottom: 0em;
}

/* ========= Other ========= */

a:link, a:visited {
    color: #006600;
    text-decoration: none;
}

a:hover {
    color: #003300;
}

th.headrow {
    font-weight: bold;
    padding-bottom: 4px;
    font-size: 108%;
    text-align: left;
    border-bottom: 1px solid #000;
    white-space: nowrap;
}

th.others {
    color: #006600;
    text-align: left;
}

td.textcell {
    vertical-align: top;
    padding-left: 1.2em;
    padding-bottom: 1em;
}

td.textcell p {
    margin-top: 0em;
}

td.textcell ul, td.ulcell ul {
    margin-top: 0px;
}

td.ulcell {
    vertical-align: top;
}

em {
    font-weight: bold;
    font-style: italic;
}

strong {
    font-weight: bold;
}

hr {
    border: 0px;
    height: 1px;
    background-color: #ccc;
}

.newsDate {
    font-size: 85%;
    font-style: italic;
    color: #66cc66;
}

code, pre, tt {
    font-size: 93%;
}

h1 {
    font-size: 138.5%;
    font-weight: bold;
    color: #006600;
    margin-top: 0em;
    margin-bottom: 1em;
}

h2 {
    font-size: 123.1%;
    font-weight: bold;
    color: #006600;
    border-bottom: 1px solid #000;
    margin-top: 0.5em;
}

h3 {
    font-size: 108%;
    font-weight: bold;
    color: #006600;
}

h4 {
    font-size: 100%;
    font-weight: bold;
    color: #006600;
}

small {
    font-size: 85%;
}

a.small {
    font-size: 75%;
    text-decoration: none;
}

.tableTitle {
    font-weight: bold;
}

.tableExtras {
    font-size: 85%;
    color: #FFFFFF;
}

.tip {
    border: 1px solid #00c;
    color: #006;
    background: #eef;
    padding: 8px;
}

ul.spaced li {
    margin-bottom: 0.75em;
}

.indent {
    margin-left: 20px;
}

hr.greyline {
    border-top: thin solid #CCCCCC;
    margin-top: 0px;
    margin-bottom: 0px;
}

.underline {
    text-decoration: underline;
}

.accesskey {
    text-decoration: underline;
}

dl {
    margin-left: 40px;
}

